force-app/main/default/objects/Makeup_Day__c/Makeup_Day__c.object-meta.xml
<CustomObject>
    <description>One per makeup date a district reports. Many-to-many with Closure_Event via Closure_Makeup_Link__c.</description>
    <label>Makeup Day</label>
    <nameField>
        <displayFormat>MD-{0000000}</displayFormat>
        <label>Makeup Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Makeup Days</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>