force-app/main/default/objects/Makeup_Day__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set when a board approves the makeup plan.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Makeup Days Approved</relationshipLabel>
    <relationshipName>ApprovedBy</relationshipName>
    <type>Lookup</type>
</CustomField>