force-app/main/default/objects/Makeup_Day__c/fields/Board_Vote_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_Vote_Date__c</fullName>
    <description>When the local board approved (for Saturday or Extended Day methods).</description>
    <label>Board Vote Date</label>
    <type>Date</type>
</CustomField>