force-app/main/default/objects/Makeup_Day__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denormalized for reporting.</description>
    <label>District</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Makeup Days (District)</relationshipLabel>
    <relationshipName>District</relationshipName>
    <type>Lookup</type>
</CustomField>