force-app/main/default/objects/Makeup_Day__c/fields/Makeup_Date__c.field-meta.xml
<CustomField>
    <fullName>Makeup_Date__c</fullName>
    <label>Makeup Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>